コーディング規約を追加しました。

--- a/匠共和国憲法.md
+++ b/匠共和国憲法.md
@@ -37,6 +37,8 @@
  5   一つクラスのつきメンバ変数は2つまで
 
  6   Setterを使うなgetterも極力避けること
+
+ 7   コードを追加したならその日のpushする。＿2017　03　07　16：55改定
    	
 コメント
  
@@ -45,6 +47,8 @@
  CPP
 
  関数一つ一つに
+
+わかりやすいコミットをする。　＿2017　03　07　16：55改定
 
 //内容 
 //引数
